# nearby

./: MODULE.bazel  WORKSPACE.bzlmod
connections/walkietalkie/: BUILD  walkietalkie.h
internal/platform/implementation/linux/: BUILD  bluetooth_classic_device.cc  bluetooth_devices.cc  device_info.cc  device_info.h
