module(name = "nearby", version="")

bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "abseil-cpp", version = "20230802.1", repo_name = "com_google_absl")
bazel_dep(name = "boringssl", version = "0.0.0-20230215-5c22014")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "gflags", version = "2.2.2", repo_name = "com_github_gflags_gflags")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "glog", version = "0.6.0",repo_name="com_google_glog")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "re2", version = "2021-09-01")
# -- bazel_dep definitions -- #

# End of extension `non_module_deps`
